data/derived/comb/progs/unify/prog3478.ml.out
Characters 84-88:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         'a -> float -> float
